--- a/docs/binary-classification/binary-classification.mdx
+++ b/docs/binary-classification/binary-classification.mdx
@@ -4,6 +4,8 @@ sidebar_position: 1
 
 # Binary Classification
 
+Binary Classifiication is the most classic problem in ML.
+
 Binary Classification solves the problem,
 
 $$
@@ -24,4 +26,4 @@ $$
 \hat{y} = f(x)
 $$
 
-By best fit, we typically mean to minimize a loss value. Depending on the algorithm, the loss function can be different.
+By best fit, we typically mean to minimize a loss value. Depending on the algorithm, the loss function can be different. However, for binary classification, there are also some method based on rules, what we call the covering algorithm.
