--- a/docs/bayes/bayes-linear-regression.mdx
+++ b/docs/bayes/bayes-linear-regression.mdx
@@ -16,8 +16,8 @@ $$
 
 where:
 - $y_i$ is the target value for the $i$-th observation,
-- $\mathbf{x}_i = (x_{i1}, x_{i2}, \dots, x_{ip})^T$ is the feature vector for the $i$-th observation,
-- $\beta = (\beta_0, \beta_1, \dots, \beta_p)^T$ is the vector of unknown regression coefficients (parameters),
+- $\mathbf{x}_i$ is the feature vector for the $i$-th observation,
+- $\beta$ is the vector of unknown regression coefficients (parameters),
 - $\epsilon_i$ is the error term (or residual), which is assumed to be normally distributed: $\epsilon_i \sim \mathcal{N}(0, \sigma^2)$, i.e., errors are independent and identically distributed with mean 0 and variance $\sigma^2$.
 
 Thus, for each observation $i$, the conditional probability of $y_i$ given the feature vector $\mathbf{x}_i$ and the parameters $\beta$ is:
