--- a/docs/binary-classification/covering.mdx
+++ b/docs/binary-classification/covering.mdx
@@ -6,7 +6,7 @@ sidebar_position: 4
 
 TODO
 
-Covering Algorithm is different from all the algorithms we have seen and will see in this book. Covering Algorithm is an algorithm based on rules rather than math.
+Covering Algorithm is different from all the algorithms we have seen. Covering Algorithm is an algorithm based on rules rather than math.
 
 We use,
 
