--- a/docs/decision-tree.mdx
+++ b/docs/decision-tree.mdx
@@ -4,7 +4,7 @@ sidebar_position: 4
 
 # Decision Tree
 
-A decision tree is a flowchart-like tree structure where an internal node represents a feature(or attribute), the branch represents a decision rule, and each leaf node represents the outcome. The topmost node in a decision tree is known as the root node. It learns to partition on the basis of the attribute value.
+A decision tree is a flowchart-like tree structure where an internal node represents a feature(or attribute), the branch represents a decision rule, and each leaf node represents the outcome. The topmost node in a decision tree is known as the root node. It learns to partition on the basis of the attribute value. This is another rule-based algorithm.
 
 For example,
 
@@ -41,7 +41,7 @@ Where $H(y|x)$ is the mutual entropy of $y$ given $x$.
 Mutual entropy of a distribution $p(y|x)$ is defined as,
 
 $$
-H(y|x) = \mathbb{E}(-p(y|x) \; log \; p(y|x))
+H(y|x) = \mathbb{E}_y(-p(y|x) \; log \; p(y|x))
 $$
 
 Information entropy is the measure of how uncertain a distribution is.
@@ -151,3 +151,7 @@ print(f"Test accuracy: {accuracy:.4f}")
 print("Sample predictions:", y_pred[:10])
 print("Actual labels:     ", y_test[:10])
 ```
+
+## Random Forest
+
+Random Forest is a collection of decision trees, where each tree is trained on a random subset of the data. The final prediction is the majority vote of all trees. The idea is very simple, but it is effective in practice.
