--- a/docs/binary-classification/support-vector-machine.mdx
+++ b/docs/binary-classification/support-vector-machine.mdx
@@ -42,6 +42,8 @@ $$
 
 For a high dimensional plane $w^T x + b = 0$, the $w^T$ is the normal vector of the plane because, for any two point $x_1$ and $x_2$ on the plane, $w^T (x_1 - x_2) = 0$ (by subtracting $w^T x_1 + b = 0$ and $w^T x_2 + b = 0$).
 
+This $w^T$ is called the support vector.
+
 :::
 
 :::tip
