--- a/docs/binary-classification/support-vector-machine.mdx
+++ b/docs/binary-classification/support-vector-machine.mdx
@@ -27,7 +27,7 @@ That is optimal for splitting the space into two regions, the upper part $w^T x 
 We would like to have least wrongly classified points and the maximum margin between the two regions. The margin means $\epsilon$ such that, there are as few points as possible in the region 
 
 $$
-\frac{||w^T x + b||_2}{||w||_2} < \epsilon
+\frac{||w^T x + b||}{||w||_2} < \epsilon
 $$
 
 So that there could be fewer points close to the plane, which makes the classification more robust.
