--- a/docs/nearest-neigbours.mdx
+++ b/docs/nearest-neigbours.mdx
@@ -34,7 +34,7 @@ A linear space with a distance function is called a metric space.
 For inner product space, a natural distance function is,
 
 $$
-dist(x, y) = \langle x, y \rangle
+dist(x, y) = \sqrt{\langle x - y, x - y  \rangle}
 $$
 
 :::
