--- a/docs/feature-reduction/pca.mdx
+++ b/docs/feature-reduction/pca.mdx
@@ -44,7 +44,7 @@ Where $U$ and $V$ are orthogonal matrices and $\Sigma$ is a diagonal matrix. Thi
 
 $U$ and $V$ are the left and right singular vectors of $X$ respectively. $\Sigma$ is the singular values of $X$. For a square matrix, the singular values are the eigenvalues.
 
-$U$ is responsible for rotating the vector into a proper basis, then $Sigma$ brings the space into a another dimension while performing a stretch, then $V$ rotates the target space.
+$U$ is responsible for rotating the vector into a proper basis, then $\Sigma$ brings the space into a another dimension while performing a stretch, then $V$ rotates the target space.
 
 To calculate the SVD,
 
