--- a/docs/generalized-regression.mdx
+++ b/docs/generalized-regression.mdx
@@ -138,7 +138,7 @@ $$
 For homogeneous coordinates,
 
 $$
-w^T = \overline{yx} (\overline{xx^T}) ^ {-1}
+w^T = \overline{yx^T} (\overline{xx^T}) ^ {-1}
 $$
 
 :::
