--- a/docs/binary-classification/support-vector-machine.mdx
+++ b/docs/binary-classification/support-vector-machine.mdx
@@ -257,7 +257,7 @@ $$
 Before using gradient descent, we can do some simplification, because,
 
 $$
-\frac{\partial L}{\partial \xi_i} = 1 - \alpha_i - \beta_i
+\frac{\partial L}{\partial \xi_i} = 1 - \alpha_i - \beta_i = 0
 $$
 
 So,
