--- a/docs/feature-reduction/lda.mdx
+++ b/docs/feature-reduction/lda.mdx
@@ -147,7 +147,7 @@ $$
 ||M||_{F} = \sqrt{\sum_{i,j} M_{i,j}^2}
 $$
 
-Which, if we define $\lambda_i$ as the eigenvalues of $M$, then,
+Which, if we define $\lambda_i$ as the eigenvalues of $M$, also equals,
 
 $$
 ||M||_{F} = \sqrt{\sum_{i} \lambda_i^2}
